crates/nash-report/src/snapshots/nash_report__canonicalize__coverage__variant_irregular_recursion.snap
---
source: crates/nash-report/src/canonicalize.rs
description: "type Equal 'a = More (Equal (List 'a))"
---
nash::names::irregular_recursion

  × This recursive use of `First.Equal` constructs the parameter 'a:
   ╭─[Main.nash:1:22]
 1 │ type Equal 'a = More (Equal (List 'a))
   ·                      ─────────────────
   ╰────
  help: Pass a type variable for this parameter so context inference can terminate.
