crates/nash-report/src/snapshots/nash_report__canonicalize__coverage__variant_kind_mismatch.snap
---
source: crates/nash-report/src/canonicalize.rs
expression: "crate::render_plain(&report, &source, \"Main.nash\")"
---
nash::names::kind_mismatch

  × Kind mismatch in the type annotation.
   ╭─[Main.nash:1:1]
 1 │ name = other
   · ────
 2 │ other = name
   ╰────
  help: Expected kind `Type`, found `Type -> Type`.
