crates/nash-report/src/snapshots/nash_report__canonicalize__coverage__variant_labeled_ctor_extra_field.snap
---
source: crates/nash-report/src/canonicalize.rs
expression: "crate::render_plain(&report, &source, \"Main.nash\")"
---
UNKNOWN FIELD

  × The `a` constructor has no `a` field:
   ╭─[Main.nash:1:1]
 1 │ name = other
   · ────
 2 │ other = name
   ╰────
  help: Remove this extra field or check its spelling against the constructor
        declaration.
