crates/nash-report/src/snapshots/nash_report__canonicalize__coverage__variant_labeled_ctor_missing_field.snap
---
source: crates/nash-report/src/canonicalize.rs
expression: "crate::render_plain(&report, &source, \"Main.nash\")"
---
  × The `a` constructor needs a `a` field:
   ╭─[Main.nash:1:1]
 1 │ name = other
   · ────
 2 │ other = name
   ╰────
  help: Add the missing field to this constructor application.
