crates/nash-report/src/snapshots/nash_report__canonicalize__coverage__variant_labeled_ctor_unknown_field.snap
---
source: crates/nash-report/src/canonicalize.rs
description: "type Point = Point { x : Int }\nvalue = Point { y = 1 }"
---
nash::names::labeled_ctor_unknown_field

  × The `Point` constructor has no `y` field:
   ╭─[Main.nash:2:17]
 1 │ type Point = Point { x : Int }
 2 │ value = Point { y = 1 }
   ·                 ─────
   ╰────
  help: Check the field name against the constructor declaration.
