crates/nash-report/src/snapshots/nash_report__canonicalize__coverage__variant_missing_method.snap
---
source: crates/nash-report/src/canonicalize.rs
expression: "crate::render_plain(&report, &source, \"Main.nash\")"
---
  × This `Equal` impl does not define `name`:
   ╭─[Main.nash:1:1]
 1 │ name = other
   · ────
 2 │ other = name
   ╰────
  help: Add a `name` definition to this impl.
