crates/nash-report/src/snapshots/nash_report__canonicalize__coverage__variant_missing_module_header.snap
---
source: crates/nash-report/src/canonicalize.rs
description: value = 1
---
nash::names::missing_module_header

  × Missing module declaration.
  help: Add `module Main exposing (..)` at the start of the file.
