crates/nash-report/src/snapshots/nash_report__canonicalize__coverage__variant_missing_superclass.snap
---
source: crates/nash-report/src/canonicalize.rs
expression: "crate::render_plain(&report, &source, \"Main.nash\")"
---
MISSING SUPERCLASS

  × The `First.Equal` impl for 'a0 does not establish superclass 1:
   ╭─[Main.nash:1:1]
 1 │ name = other
   · ────
 2 │ other = name
   ╰────
  help: It must also satisfy `First.Equal`. I cannot find an impl or context constraint
        that provides it. Add the required impl or include the necessary constraint in
        this impl's context.
