crates/nash-report/src/snapshots/nash_report__canonicalize__coverage__variant_negate_without_num.snap
---
source: crates/nash-report/src/canonicalize.rs
expression: "crate::render_plain(&report, &source, \"Main.nash\")"
---
  × Numeric negation requires `Num`.
   ╭─[Main.nash:1:1]
 1 │ name = other
   · ────
 2 │ other = name
   ╰────
  help: Import the module that defines `Num`.
