crates/nash-report/src/snapshots/nash_report__canonicalize__coverage__variant_not_found_binop.snap
---
source: crates/nash-report/src/canonicalize.rs
expression: "crate::render_plain(&report, &source, \"Main.nash\")"
---
  × Unknown operator `(name)`.
   ╭─[Main.nash:1:1]
 1 │ name = other
   · ────
 2 │ other = name
   ╰────
  help: Try other instead.
